# cpp-termites

./: .gitignore  CMakeLists.txt  README.md  init.cfg  wscript
config/: init.cfg
doc/: classes.xmi  doxygen.conf  wscript
i18n/: wscript
i18n/fr/: termites.po
include/: Board.hpp  Config.hpp  Game.hpp  Graphical.hpp  OptionParser.hpp  Options.hpp  Piece.hpp  Termite.hpp  TermiteSpecies.hpp  WoodChip.hpp  WoodSpecies.hpp  World.hpp  helpers.hpp  log.h  test_helpers.hpp
include/ext/: catch.hpp  log.h
src/: Board.cpp  Config.cpp  Config.hpp  Config.rl  Game.cpp  Graphical.cpp  OptionParser.cpp  Options.cpp  Piece.cpp  Termite.cpp  TermiteSpecies.cpp  WoodChip.cpp  WoodSpecies.cpp  World.cpp  helpers.cpp  helpers.hpp  main.cpp  wscript  wscript_build
src/rl/: termites_conf.rl
test/: Board_test.cpp  Config_test.cpp  Game_test.cpp  OptionParser_test.cpp  Options_test.cpp  TermiteSpecies_test.cpp  Termite_test.cpp  World_test.cpp  helpers_test.cpp  main.cpp  termites_test.cpp  test_helpers.cpp  wscript  wscript_build
test/fixtures/: ConfigFixt.hpp  init_ok.cfg
